--- a/baortbot.css
+++ b/baortbot.css
@@ -1,7 +1,8 @@
 button {
-  height: 30px;
+  align-items: 60px;
+  height: 20px;
   width: 90px;
-  background: #fff;
+  background: blue;
   border-radius: 10px;
 }
 button:hover {
