--- a/botao.css
+++ b/botao.css
@@ -1,5 +1,21 @@
-button {
-  border-radius: 25%;
-  font-size: 20px;
-  background-color: rgb(0, 255, 26);
+body {
+  min-height: 100vh;
+  background: lawngreen;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+div {
+  height: 380px;
+  width: 280px;
+  background: #fff;
+  border-radius: 10px;
+}
+div:hover {
+  transform: scale(1.05);
+  transition: 0.4s;
 }
