--- a/baortbot.css
+++ b/baortbot.css
@@ -1,11 +1,22 @@
 button {
-  align-items: 60px;
-  height: 20px;
-  width: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 120px;
   background: blue;
-  border-radius: 10px;
+  color: white;
+  font-size: 14px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: transform 0.4s, background-color 0.3s ease;
+  margin: 10px;
+  position: relative;
+  top: -20px;
 }
+
 button:hover {
   transform: scale(1.05);
-  transition: 0.4s;
+  background-color: darkblue;
 }
