--- a/estrutura.css
+++ b/estrutura.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(0, 13, 255);
+  background-color: black;
 }
 h1 {
   color: rgb(255, 0, 0);
@@ -7,7 +7,7 @@ h1 {
   text-align: center;
 }
 hr {
-  background-color: rgb(0, 0, 0);
+  background-color: white;
   height: 1.3px;
   border: none;
 }
